コンタクトフォーム設定

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <h2 data-aos="fade-up">Contact</h2>
                 <div class="contact-wrapper" data-aos="fade-up">
                     <div id="contact-form-container">
-                        <form id="contact-form" action="https://formspree.io/f/guitar.de.pop.56.6.30@gmail.com" method="POST">
+                        <form id="contact-form" action="https://formspree.io/f/xqalkeer" method="POST">
                             <div class="form-group">
                                 <input type="text" id="name" name="name" placeholder="お名前" required>
                             </div>
