フリーザリンク変更

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </a>
                     </div>
                     <div class="portfolio-item" data-aos="fade-up" data-aos-delay="300">
-                        <a href="https://chatgpt.com/g/g-N132oG1S4" target="_blank">
+                        <a href="https://chatgpt.com/g/g-68726dbf25a481918fcd310cc46503aa-huosanixiang-tan" target="_blank">
                             <img src="img/portfolio-freeza.png" alt="フ◯ーザに相談できるボット">
                             <div class="portfolio-caption">
                                 <h3>フ◯ーザに相談できるボット</h3>
@@ -178,7 +178,7 @@
             <div class="container" data-aos="fade-up">
                 <h2>無料AI初心者講座</h2>
                 <div class="ai-course-content">
-                    <p>１週間、毎日１つの動画をお送りするようプログラムしています。<br>初心者の方を対象としていますので、もうバシバシAIを使っている方には必要ないです。</p>
+                    <p>１週間、毎日１つの動画を LINEでお送りするようプログラムしています。<br>初心者の方を対象としています。無料ですので受講してみてください。</p>
                     <ul class="course-list">
                         <li>第１回　コース概要、なぜ生成AIを学ぶ？</li>
                         <li>第２回　検索で使うAI</li>
