プロフィール欄修正

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ぼっちマーケティング - 孤独な社長のお手伝い</title>
+    <title>ぼっちマーケティング - ぼっちな社長のお手伝い</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
@@ -91,10 +91,7 @@
                         <div class="icon"><i class="fas fa-lightbulb"></i></div>
                         <h4>マーケティング設計</h4>
                     </div>
-                    <div class="other-service-card">
-                        <div class="icon"><i class="fas fa-route"></i></div>
-                        <h4>カスタマージャーニー設計</h4>
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -106,8 +103,9 @@
                     <img src="img/IMG_3851.jpeg" alt="松永大輔 プロフィール写真" class="profile-pic" data-aos="fade-right">
                     <div class="profile-text" data-aos="fade-left">
                         <h3>松永大輔 (Daisuke Matsunaga)</h3>
-                        <p><strong>経歴:</strong>現役銀行員。中小企業様や個人事業主様を訪問しているときに、マーケティング部署がなかったり、マーケティングに割く時間がない状況を目の当たりにしてきた。何か手伝えることがないかと思いWebマーケティングの世界へ。副業でWeb制作・マーケティングを始め、テクノロジーの力でビジネスを加速させる喜びに目覚める。</p>
-                        <p><strong>ミッション:</strong> 「テクノロジーを、すべての人に使いやすく。」を信条に、孤独に戦う中小企業の社長や個人事業主の右腕となるべく「ぼっちマーケティング」を設立。専門用語を避け、一人ひとりの状況に合わせた最適な解決策を提案します。</p>
+                        <p><strong>経歴:</strong>中小企業や個人事業主がいい商品を持っているのにマーケティングに割く時間がなく、いい商品を広めることができていない状況を目の当たりに。何かできることがないかと思いWebマーケティングの世界へ。副業でWeb制作・マーケティングを始め、リアル✖️テクノロジーでビジネス拡大を目指す。</p>
+                        <p><strong>資格:</strong> FP１級、ウェブ解析士、初級SNSマネージャー、生成AIパスポート</p>
+                        <p><strong>ミッション:</strong> 「リアル✖︎️テクノロジー」をモッ トーにぼっちで戦う中小企業の社長や個人事業主の右腕となるべく「ぼっちマーケティング」を設立。専門用語を避け、一人ひとりの状況に合わせた最適な解決策を提案します。</p>
                     </div>
                 </div>
             </div>
@@ -180,7 +178,7 @@
                 <div class="ai-course-content">
                     <p>１週間、毎日１つの動画を LINEでお送りするようプログラムしています。<br>初心者の方を対象としています。無料ですので受講してみてください。</p>
                     <ul class="course-list">
-                        <li>第１回　コース概要、なぜ生成AIを学ぶ？</li>
+                        <li>第１回　なぜ生成AIを学ぶ？</li>
                         <li>第２回　検索で使うAI</li>
                         <li>第３回　生活に使うAI</li>
                         <li>第４回　仕事で使うAI</li>
