LINEバナー追加

--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
                         <h3>LINEでのご相談も受付中</h3>
                         <p>よりスピーディなやり取りをご希望の場合は、<br>こちらのQRコードから友だち追加をお願いします。</p>
                         <img src="img/line-qr.png" alt="LINE友だち追加QRコード">
+                        <a href="https://aimpad39.autosns.app/line" target="_blank" class="line-banner">
+                            <i class="fab fa-line"></i>
+                            <span>LINEで友だち追加</span>
+                        </a>
                     </div>
                 </div>
             </div>
