--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/logo.png">
+    <meta property="og:title" content="ぼっちマーケティング - ぼっちな社長のお手伝い">
+    <meta property="og:description" content="Web × LINE × AI で中小企業の集客を加速 〜ぼっちなマーケターのお手伝い〜">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="img/ogp.png">
+    <meta property="og:site_name" content="ぼっちマーケティング">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ぼっちマーケティング - ぼっちな社長のお手伝い">
+    <meta name="twitter:description" content="Web × LINE × AI で中小企業の集客を加速 〜ぼっちなマーケターのお手伝い〜">
+    <meta name="twitter:image" content="img/ogp.png">
 </head>
 <body>
     <header>
